--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "bootstrap": "3.3.7",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "es6-promise": "^4.2.8",
+    "vue": "^2.6.11",
+    "vuejs-paginate": "1.9.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
@@ -29,10 +33,12 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
+    "rules": {    
+      "no-console" :"off"      
+    },
     "parserOptions": {
       "parser": "babel-eslint"
-    },
-    "rules": {}
+    }
   },
   "browserslist": [
     "> 1%",
